Version ClaSS-1.0.38 release (2012/12/10)
-------------------------------------------

Changed name of config option from localpostcode to sitepostcode.

Added config option for external api_key.

Added additional language (2nd and 3rd) fields for students.



Version ClaSS-1.0.37 release (2012/12/02)
-------------------------------------------

Tiny change to display_date to blank 0000-00-00 entries.

Applied fieldtype=date to leaving and entry dates in
fetchStudent_short.

Fix to the set_charge_payment to prevent losing invoice ids.

Fix to emailing comments to academic group responsibles.

Gave office to attendance and reports through student profile.

Removed the arcane externalbook references to eportfolio.

New cron script to collect lat+lng coordinates for addresses.



Version ClaSS-1.0.36 release (2012/11/27)
-------------------------------------------

New invoice export function.

Added remittance information to the student_fees page.

Fix to marking register notices seen where communities span
yeargroups.

New imap CFG details in school.php for fetching emails.

Tidied html of comment emails.

Fix to listing sanctions in new_comment.

Added the assessment year to fetchAssessments_Short.

Made the student icon photo part of the document drop system.

Script to fetch enquiry forms from an imap account.

New custom function in school.php parse_enquiry_form.



Version ClaSS-1.0.35 release (2012/11/12)
-------------------------------------------

Fix to the recording of sentypes to prevent blank records.

Added a check of the ini setting for upload_max_filesize in document
drop.

Reworked the document drop scripts and css.

Fix to seneeds for "Add subject" option.

Shortcut link to fees added to student profile page.

Added invoice list buttons for each paymenttype.



Version ClaSS-1.0.34 release (2012/11/05)
-------------------------------------------

Fix to avoid multiple notifications for share with parents emails.
